Fix responsive navbar menu collapsing

--- a/TheHistoryOfFormulaOne/src/app/modules/ui/components/navbar/navbar.component.scss
+++ b/TheHistoryOfFormulaOne/src/app/modules/ui/components/navbar/navbar.component.scss
@@ -15,6 +15,10 @@
   z-index: 1;
 }
 
+.navbar-toggle {
+  display: none;
+}
+
 @media screen and (max-width: 600px) {
   li {
     font-size: 24px!important;
@@ -28,6 +32,10 @@
 
   .navbar-collapse {
     border: 1px solid $border-color;
+  }
+
+  .navbar-toggle {
+    display: block;
   }
 }
 
